# vlm-encoder-alignment

./: .gitignore  PRESENTATION.md  PROJECT_DETAIL.md  README.md  app.py  cli.py  config.yaml  pyproject.toml  requirements.txt
sample_data/: labels.jsonl
scripts/: analyze_cka_vs_benchmark.py  compute_internal_cka.py  compute_pretrained_cka.py  convert_llava_to_hf.py  generate_paper_figures.py  generate_sample_data.py  run_benchmarks.sh  run_cka_validation.py  run_lmms_eval_llava_gemma.py
vlm_alignment/: PROJECT_DETAIL.md  __init__.py  config.py
vlm_alignment/analysis/: __init__.py  alignment.py  cka.py  coral.py  speed_benchmark.py
vlm_alignment/data/: __init__.py  dataset.py  synthetic.py
vlm_alignment/experiments/: coral_alignment.py  e2e_validation.py  elas_score.py  encoder_comparison.py  speed_benchmark.py
vlm_alignment/models/: __init__.py  llm_loaders.py  projectors.py  vision_encoders.py
vlm_alignment/visualization/: __init__.py  alignment_plots.py  attention_maps.py  coral_plots.py  embedding_space.py  paper_utils.py  plot_style.py  speed_plots.py
